reset.css & mappar

--- a/index.html
+++ b/index.html
@@ -4,9 +4,11 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <link rel="stylesheet" href="reset.css">
+    <link rel="stylesheet" href="style.css">
+    <title>HongKong</title>
 </head>
 <body>
-    
+    <h1>Lorem ipsum dolor sit amet consectetur adipisicing elit. Soluta numquam, pariatur explicabo, quas neque cum cumque et harum, voluptatum omnis accusamus rem laboriosam esse? Eaque labore necessitatibus neque maiores magni.</h1>
 </body>
 </html>
