--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <title>HongKong</title>
 </head>
 <body>
-    <h1>Lorem ipsum dolor sit amet consectetur adipisicing elit. Soluta numquam, pariatur explicabo, quas neque cum cumque et harum, voluptatum omnis accusamus rem laboriosam esse? Eaque labore necessitatibus neque maiores magni.</h1>
+    <h1>hello world</h1>
+    <p>Här kommer den senaste pushade hemsidan</p>
 </body>
 </html>
