Main nav button sketch

--- a/index.html
+++ b/index.html
@@ -4,11 +4,24 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="reset.css">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="css/reset.css">
+    <link rel="stylesheet" href="css/style.css">
     <title>HongKong</title>
 </head>
 <body>
+    <header>
+        <div class="Main-nav-button">
+            <a class="Main-nav-button" href="http://" target="_blank" rel="noopener noreferrer">click me1</a>
+        </div>
+        <div class="Main-nav-button">
+            <a class="Main-nav-button" href="http://" target="_blank" rel="noopener noreferrer">click me2</a>
+        </div>
+        <div class="Main-nav-button">
+            <a class="Main-nav-button" href="http://" target="_blank" rel="noopener noreferrer">click me3</a>
+        </div>
+
+    </header>
+
     <h1>hello world</h1>
     <p>Här kommer den senaste pushade hemsidan</p>
 </body>
