--- a/sights/index.html
+++ b/sights/index.html
@@ -18,13 +18,14 @@
 
 <body>
     <header>
-        <nav>
+        <!-- <img src="https://upload.wikimedia.org/wikipedia/commons/d/d0/Flower_Hong_Kong.svg" alt="" class="logo"> -->
+        <nav id="btnContainer">
 
             <span>
-                <a href="/" rel="noopener noreferrer">Home</a>
+                <a href="/" rel="noopener noreferrer" class="navBtn">Home</a>
             </span>
             <span>
-                <a href="/sights/" rel="noopener noreferrer">sights</a>
+                <a href="/sights/" rel="noopener noreferrer" class="navBtn">sights</a>
             </span>
         </nav>
     </header>
