ändrade main nav button

--- a/index.html
+++ b/index.html
@@ -10,14 +10,15 @@
 </head>
 <body>
     <header>
-        <!-- <img src="https://upload.wikimedia.org/wikipedia/commons/d/d0/Flower_Hong_Kong.svg" alt="" class="logo"> -->
-        <nav id="btnContainer">
+            <img src="https://upload.wikimedia.org/wikipedia/commons/d/d0/Flower_Hong_Kong.svg" alt="" class="logo">
 
-            <span>
-                <a href="/" rel="noopener noreferrer" class="navBtn">Home</a>
+        <nav id="btnContainer">
+            
+            <span class="Main-nav-button">
+                <a href="/" rel="noopener noreferrer" class="Main-nav-button">Home</a>
             </span>
-            <span>
-                <a href="/sights/" rel="noopener noreferrer" class="navBtn">sights</a>
+            <span class="Main-nav-button">
+                <a href="/sights/" rel="noopener noreferrer" class="Main-nav-button">sights</a>
             </span>
         </nav>
     </header>
