--- a/index.html
+++ b/index.html
@@ -10,14 +10,17 @@
 </head>
 <body>
     <header>
-        <div class="Main-nav-button">
-            <a class="Main-nav-button" href="http://" target="_blank" rel="noopener noreferrer">click me1</a>
-        </div>
-        <div class="Main-nav-button">
-            <a class="Main-nav-button" href="http://" target="_blank" rel="noopener noreferrer">click me2</a>
-        </div>
-        <div class="Main-nav-button">
-            <a class="Main-nav-button" href="http://" target="_blank" rel="noopener noreferrer">click me3</a>
+        <img class="Main-nav-flag" src="/img/Hong_Kong_Flag.svg" alt="Flag of Hong Kong">
+        <div class="Main-nav-buttons">
+            <div class="Main-nav-button">
+                <a class="Main-nav-button" href="http://" target="_blank" rel="noopener noreferrer">click me1</a>
+            </div>
+            <div class="Main-nav-button">
+                <a class="Main-nav-button" href="http://" target="_blank" rel="noopener noreferrer">click me2</a>
+            </div>
+            <div class="Main-nav-button">
+                <a class="Main-nav-button" href="http://" target="_blank" rel="noopener noreferrer">click me3</a>
+            </div>
         </div>
 
     </header>
