--- a/sights/index.html
+++ b/sights/index.html
@@ -18,14 +18,19 @@
 
 <body>
     <header>
-        <!-- <img src="https://upload.wikimedia.org/wikipedia/commons/d/d0/Flower_Hong_Kong.svg" alt="" class="logo"> -->
-        <nav id="btnContainer">
+        <figure class="logo">
+                <img src="/img/Flower_Hong_Kong.svg" alt="">
+                <figcaption>Honk Kong</figcaption>
+                
+        </figure>
 
-            <span>
-                <a href="/" rel="noopener noreferrer" class="navBtn">Home</a>
+        <nav id="btnContainer">
+            
+            <span class="Main-nav-button">
+                <a href="/" rel="noopener noreferrer" class="Main-nav-button">Home</a>
             </span>
-            <span>
-                <a href="/sights/" rel="noopener noreferrer" class="navBtn">sights</a>
+            <span class="Main-nav-button">
+                <a href="/sights/" rel="noopener noreferrer" class="Main-nav-button">sights</a>
             </span>
         </nav>
     </header>
@@ -41,7 +46,21 @@
     </div>
     <footer>
         <button class="scroll-to-topbtn" onclick="scrollToTop()">/\</button>
-
+        <h1>Footer</h1>
+        <ul>
+            <li>
+                <p>link 1</p>
+            </li>
+            <li>
+                <p>link 2</p>
+            </li>
+            <li>
+                <p>link 3</p>
+            </li>
+            <li>
+                <p>link 4</p>
+            </li>
+        </ul>
     </footer>
 </body>
 <script src="src/index.js"></script>
