--- a/index.html
+++ b/index.html
@@ -4,14 +4,14 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="css/reset.css">
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="/css/reset.css">
+    <link rel="stylesheet" href="/css/style.css">
     <title>HongKong</title>
 </head>
 <body>
     <header>
         <figure class="logo">
-                <img src="img/Flower_Hong_Kong.svg" alt="">
+                <img src="/img/Flower_Hong_Kong.svg" alt="">
                 <figcaption>Honk Kong</figcaption>
                 
         </figure>
