--- a/traditions/index.html
+++ b/traditions/index.html
@@ -7,5 +7,7 @@
     <link rel="stylesheet" href="../css/style.css" />
     <title>Traditions</title>
   </head>
-  <body></body>
+  <body>
+    <p>text</p>
+  </body>
 </html>
