--- a/traditions/index.html
+++ b/traditions/index.html
@@ -7,7 +7,5 @@
     <link rel="stylesheet" href="../css/style.css" />
     <title>Traditions</title>
   </head>
-  <body>
-    <p>text</p>
-  </body>
+  <body></body>
 </html>
