--- a/culture/index.html
+++ b/culture/index.html
@@ -4,9 +4,23 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Hong Kong Culture</title>
 </head>
 <body>
-    
+    <div class="culture-container">
+        <nav class="culture-nav">
+            <ul class="culture-nav-list">
+
+            </ul>
+        </nav>
+
+        <main class="culture-main">
+
+        </main>
+
+        <footer class="culture-footer">
+
+        </footer>
+    </div>
 </body>
 </html>
