Hopningsvis är headern klar och responsiv Den är inte riktigt som figma för att jag inte kunde få det att fungera

--- a/sights/index.html
+++ b/sights/index.html
@@ -6,23 +6,23 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="/css/reset.css">
-    <link rel="stylesheet" href="/css/style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <link rel="stylesheet" href="/css/style.css">
     <title>Sights</title>
 </head>
 
 <body>
     <header class="topnav" id="myTopnav">
-        <a href="/" class="active"id="homeBtn">
-            <img src="/img/Flag_of_Hong_Kong2.svg" alt="">
-        </a>
-        <a href="/culture/">culture</a>
+
+        <a href="/" id="homeBtn"></a>
+        <a href="/" >Home</a>
         <a href="/traditions/">traditions</a>
-        <a href="/sights/">Sights</a>
+        <a href="/sights/" class="active">Sights</a>
+        <a href="/culture/">culture</a>
         <a href="javascript:void(0);" class="icon" onclick="myFunction()">
-          <i class="fa fa-bars"></i>
+            <i class="fa fa-bars"></i>
         </a>
-      </header>
+    </header>
     <section class="SightSection" id="s1">
         <article>
             <img src="https://www.planetware.com/wpimages/2018/10/hong-kong-attractions-victoria-peak-view-over-harbor.jpg"
@@ -43,7 +43,7 @@
     <section class="SightSection" id="s2">
         <article>
             <img src="https://www.planetware.com/wpimages/2018/10/hong-kong-attractions-victoria-peak-view-over-harbor.jpg"
-                alt="">
+            alt="">
             <div>
                 <h1>Sight2</h1>
                 <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Eaque nihil obcaecati recusandae omnis
@@ -70,11 +70,10 @@
                     officia nobis nulla ducimus ab delectus. Hic pariatur debitis beatae error unde, dolorem magni!
                     Perferendis, error.</p>
             </div>
-    
+
         </article>
     </section>
     <footer>
-        <button class="scroll-to-topbtn" onclick="scrollToTop()">/\</button>
         <h1>Footer</h1>
         <ul>
             <li>
