--- a/index.html
+++ b/index.html
@@ -6,33 +6,35 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="/css/reset.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="/css/style.css">
+
     <title>HongKong</title>
 </head>
 
 <body>
     <header class="topnav" id="myTopnav">
-        <a href="/" class="active"id="homeBtn">
-            <img src="/img/Flag_of_Hong_Kong2.svg" alt="">
-        </a>
-        <a href="/culture/">culture</a>
+
+        <a href="/" id="homeBtn"></a>
+        <a href="/" class="active">Home</a>
         <a href="/traditions/">traditions</a>
         <a href="/sights/">Sights</a>
+        <a href="/culture/">culture</a>
         <a href="javascript:void(0);" class="icon" onclick="myFunction()">
-          <i class="fa fa-bars"></i>
+            <i class="fa fa-bars"></i>
         </a>
-      </header>
+    </header>
     <main>
         <article>
-            <h1>Huvud introduction</h1>
-            <h2>Mobile first eller Desktop first?</h2>
-            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Consequuntur ullam quam rem nostrum, nobis
-                dignissimos aspernatur corrupti cupiditate quibusdam? Harum non vitae molestiae voluptatum sit dicta
-                nulla labore, ea accusantium.</p>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Laboriosam veritatis deleniti ad consequuntur
-                inventore, illum officiis beatae molestias neque quod incidunt, ex, veniam adipisci nisi voluptates modi
-                iusto qui fugiat?</p>
-            <h2>Kanske något i mellan Huvud introdution och sights navigation</h2>
+            <div class="MainThumbnail">
+                <div>
+                    <h1>Hong Kong</h1>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aliquam magnam beatae animi veritatis
+                        corrupti </p>
+                </div>
+            </div>
+            <h1>Just nu är </h1>
+
         </article>
         <section class="sights-container">
             <h1>Sights</h1>
@@ -54,7 +56,6 @@
 
     </main>
     <footer>
-        <button class="scroll-to-topbtn" onclick="scrollToTop()">/\</button>
         <h1>Footer</h1>
         <ul>
             <li>
