Bild på tin hau och båtar

--- a/traditions/index.html
+++ b/traditions/index.html
@@ -19,6 +19,7 @@
       </a>
     </header>
     <main class="trads-main">
+      <!-- intro -->
       <article class="trads-article trads-top">
         <h1 class="trads-h1 trads-title">Traditions</h1>
         <!-- <img src="./img/dragon.jpg" alt="Dragon" /> -->
@@ -32,6 +33,7 @@
           quibusdam labore adipisci.
         </p>
       </article>
+      <!-- New Year -->
       <article class="trads-article trads-new-year">
         <h2>Chinese New Year</h2>
         <div>
@@ -70,29 +72,71 @@
         </div>
       </article>
 
-      <article class="trads-article trads trads-tin-hau">
-        <h2>Tin Hau Festival</h2>
-        <p>
-          The Chinese sea goddess Tin Hau has historically been one of the most
-          important gods in Hong Kong. As such, her birthday is accompanied by a
-          grand celebration. While there are many different celebrations around
-          the area the biggest one is in Cha Kwo Ling where people will parade
-          down the streets, some may also dress up as mythological creatures
-          like dragons or qilins and perform traditional dances.
-        </p>
+      <!-- Tin Hau -->
+      <article class="trads-article trads-tin-hau">
+        <div>
+          <div>
+            <h2>Tin Hau Festival</h2>
+            <p>
+              The Chinese sea goddess Tin Hau has historically been one of the
+              most important gods in Hong Kong. As such, her birthday is
+              accompanied by a grand celebration. While there are many different
+              celebrations around the area the biggest one is in Cha Kwo Ling
+              where people will parade down the streets, some may also dress up
+              as mythological creatures like dragons or qilins and perform
+              traditional dances.
+            </p>
+          </div>
+          <figure>
+            <img src="./img/Tin_Hau.jpg" alt="Statue of Tin Hau" />
+            <figcaption>
+              Statue of the goddess Tin Hau at Kwum Yam Shrine, Repulse Bay,
+              Hong Kong
+              <p class="trads-reference">
+                <a
+                  href="https://commons.wikimedia.org/wiki/File:Tin_Hau_statue_at_Kwun_Yam_Shrine_at_Repulse_Bay.jpg"
+                  >FlyingToaster at English Wikipedia</a
+                >,
+                <a href="https://creativecommons.org/licenses/by/3.0"
+                  >CC BY 3.0</a
+                >, via Wikimedia Commons
+              </p>
+            </figcaption>
+          </figure>
+        </div>
       </article>
 
-      <article class="trads-article trads trads-boat">
-        <h2>Dragon Boat Festival</h2>
-        <p>
-          The dragon boat festival is a public holiday in Hong Kong where people
-          race in long canoes made to mimic ancient war boats with up to 80 crew
-          members rowing in the beat to a drum. While there are several races
-          taking place during the festival the CCB Hong Kong International
-          Dragon Boat Races in Victoria Harbour is the most popular with over
-          four thousand participants from all over the world and up to thirty
-          thousand spectators.
-        </p>
+      <!-- boat -->
+      <article class="trads-article trads-boat">
+        <div>
+          <div>
+            <h2>Dragon Boat Festival</h2>
+            <p>
+              The dragon boat festival is a public holiday in Hong Kong where
+              people race in long canoes made to mimic ancient war boats with up
+              to 80 crew members rowing in the beat to a drum. While there are
+              several races taking place during the festival the CCB Hong Kong
+              International Dragon Boat Races in Victoria Harbour is the most
+              popular with over four thousand participants from all over the
+              world and up to thirty thousand spectators.
+            </p>
+          </div>
+          <figure>
+            <img src="./img/boat.jpg" alt="Multiple Dragon Boats" />
+            <figcaption>
+              Dragon boat race in Hong Kong
+              <p class="trads-reference">
+                <a
+                  href="https://commons.wikimedia.org/wiki/File:Dragon_boat_racing_in_Hong_Kong.jpg"
+                  >Atmhk</a
+                >,
+                <a href="https://creativecommons.org/licenses/by-sa/3.0"
+                  >CC BY-SA 3.0</a
+                >, via Wikimedia Commons
+              </p>
+            </figcaption>
+          </figure>
+        </div>
       </article>
     </main>
   </body>
