--- a/index.html
+++ b/index.html
@@ -25,17 +25,16 @@
         </a>
     </header>
     <main>
-        <article>
-            <div class="MainThumbnail">
-                <div>
-                    <h1>Hong Kong</h1>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aliquam magnam beatae animi veritatis
-                        corrupti </p>
-                </div>
-            </div>
-            <h1>Just nu är </h1>
 
-        </article>
+        <section class="MainThumbnail">
+            <div>
+                <h1>Hong Kong</h1>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aliquam magnam beatae animi veritatis
+                    corrupti </p>
+            </div>
+        </section>
+        <h1 id="cssIdentifier">Just nu är </h1>
+
         <section class="sights-container">
             <h1>Sights</h1>
             <span id="sight-card-1" class="sightlink">
