--- a/sights/index.html
+++ b/sights/index.html
@@ -15,7 +15,7 @@
     <header class="topnav" id="myTopnav">
 
         <a href="/" id="homeBtn"></a>
-        <a href="/" >Home</a>
+        <a href="/">Home</a>
         <a href="/traditions/">traditions</a>
         <a href="/sights/" class="active">Sights</a>
         <a href="/culture/">culture</a>
@@ -25,10 +25,40 @@
     </header>
     <section class="SightSection" id="s1">
         <article>
-            <img src="https://www.planetware.com/wpimages/2018/10/hong-kong-attractions-victoria-peak-view-over-harbor.jpg"
-                alt="">
+            <figure>
+                <img src="https://upload.wikimedia.org/wikipedia/commons/3/3f/Hong_Kong_Central_Night_Skyline_from_Victoria_Harbour_-_panoramio.jpg" alt="Picture of the Hong Kong Skyline">
+                <figcaption>
+                    <span><a href="https://commons.wikimedia.org/wiki/File:Hong_Kong_Central_Night_Skyline_from_Victoria_Harbour_-_panoramio.jpg">Aaron Zhu</a>, <a href="https://creativecommons.org/licenses/by-sa/3.0">CC BY-SA 3.0</a>, via Wikimedia Commons</span>
+                </figcaption>
+            </figure>
             <div>
-                <h1>Sight1</h1>
+                <h1>The Skyline</h1>
+                <h2>The best places two to enjoy the beautiful skyline of Hong Kong are Victoria Peak and the Star Ferry
+                    ride along the waters surrounding the city. </h2> <p> Victoria Peak is the highest hill on the Island allowing
+                    for an incredible view of the energetic and noisy city and skyscrapers. The Star Ferry is a ferry
+                    with origins back in 1880, the skillful drivers are experts at navigating the usually busy waters
+                    giving a full showcase of the Skyline. This is one of the best deals you can get in Hong Kong
+                    because it only costs a few Hong Kong Dollars.</p>
+                <p>Both of these attractions get better in the evening
+                    thanks to the Symphony of Lights show. This is a light show that uses 360 degrees lasers that hit
+                    the skyscrapers and it is one of the most popular attractions that's free.</p>
+            </div>
+
+        </article>
+    </section>
+    <br>
+    <section class="SightSection" id="s2">
+        <article>
+            <figure>
+
+                <img src="https://upload.wikimedia.org/wikipedia/commons/1/1e/Hongkong_-_park_-_panoramio.jpg"
+                alt="Picture of Hong Kong Park">
+                <figcaption>
+                    <span><a href="https://commons.wikimedia.org/wiki/File:Hongkong_-_park_-_panoramio.jpg">Pavel Špindler</a>, <a href="https://creativecommons.org/licenses/by/3.0">CC BY 3.0</a>, via Wikimedia Commons</span>
+                </figcaption>
+            </figure>
+            <div>
+                <h1>Hong Kong Park</h1>
                 <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Eaque nihil obcaecati recusandae omnis
                     delectus ad numquam id facilis pariatur, minima dolor sequi, neque consectetur ex error perferendis
                     explicabo dolorem exercitationem.</p>
@@ -40,29 +70,17 @@
         </article>
     </section>
     <br>
-    <section class="SightSection" id="s2">
-        <article>
-            <img src="https://www.planetware.com/wpimages/2018/10/hong-kong-attractions-victoria-peak-view-over-harbor.jpg"
-            alt="">
-            <div>
-                <h1>Sight2</h1>
-                <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Eaque nihil obcaecati recusandae omnis
-                    delectus ad numquam id facilis pariatur, minima dolor sequi, neque consectetur ex error perferendis
-                    explicabo dolorem exercitationem.</p>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Molestias, nihil quibusdam ea minus aliquam
-                    officia nobis nulla ducimus ab delectus. Hic pariatur debitis beatae error unde, dolorem magni!
-                    Perferendis, error.</p>
-            </div>
-            
-        </article>
-    </section>
-    <br>
     <section class="SightSection" id="s3">
         <article>
-            <img src="https://www.planetware.com/wpimages/2018/10/hong-kong-attractions-victoria-peak-view-over-harbor.jpg"
-                alt="">
+            <figure>
+                <img src="https://upload.wikimedia.org/wikipedia/commons/1/13/Tian_Tan_Buddha_by_Beria.jpg"
+                alt="Picture of Big Buddha Statue in Hong Kong">
+                <figcaption>
+                    <span><a href="https://commons.wikimedia.org/wiki/File:Tian_Tan_Buddha_by_Beria.jpg">Béria L. Rodríguez</a>, <a href="https://creativecommons.org/licenses/by-sa/3.0">CC BY-SA 3.0</a>, via Wikimedia Commons</span>
+                </figcaption>
+            </figure>
             <div>
-                <h1>Sight3</h1>
+                <h1>Big Buddha </h1>
                 <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Eaque nihil obcaecati recusandae omnis
                     delectus ad numquam id facilis pariatur, minima dolor sequi, neque consectetur ex error perferendis
                     explicabo dolorem exercitationem.</p>
