--- a/traditions/index.html
+++ b/traditions/index.html
@@ -21,17 +21,20 @@
     <main class="trads-main">
       <!-- intro -->
       <article class="trads-article trads-top">
-        <h1 class="trads-h1 trads-title">Traditions</h1>
-        <!-- <img src="./img/dragon.jpg" alt="Dragon" /> -->
-        <p>
-          Lorem ipsum dolor sit, amet consectetur adipisicing elit. Est sint
-          commodi asperiores fugit dolor nulla incidunt tempore pariatur quaerat
-          accusamus, voluptas suscipit dolore voluptates cumque, sunt doloribus
-          non temporibus id. Lorem ipsum dolor sit amet consectetur, adipisicing
-          elit. Repellendus, quaerat non. Explicabo amet magni eaque reiciendis
-          quo in quae tenetur, optio sequi velit porro ipsum vel. Nostrum
-          quibusdam labore adipisci.
-        </p>
+        <div>
+          <!-- class="card" -->
+          <h1 class="trads-h1 trads-title">Traditions</h1>
+          <!-- <img src="./img/dragon.jpg" alt="Dragon" /> -->
+          <p>
+            Lorem ipsum dolor sit, amet consectetur adipisicing elit. Est sint
+            commodi asperiores fugit dolor nulla incidunt tempore pariatur
+            quaerat accusamus, voluptas suscipit dolore voluptates cumque, sunt
+            doloribus non temporibus id. Lorem ipsum dolor sit amet consectetur,
+            adipisicing elit. Repellendus, quaerat non. Explicabo amet magni
+            eaque reiciendis quo in quae tenetur, optio sequi velit porro ipsum
+            vel. Nostrum quibusdam labore adipisci.
+          </p>
+        </div>
       </article>
       <!-- New Year -->
       <article class="trads-article trads-new-year">
