--- a/traditions/index.html
+++ b/traditions/index.html
@@ -20,11 +20,9 @@
     </header>
     <main class="trads-main">
       <!-- intro -->
-      <article class="trads-article trads-top">
+      <!-- <article class="trads-article trads-top">
         <div>
-          <!-- class="card" -->
           <h1 class="trads-h1 trads-title">Traditions</h1>
-          <!-- <img src="./img/dragon.jpg" alt="Dragon" /> -->
           <p>
             Lorem ipsum dolor sit, amet consectetur adipisicing elit. Est sint
             commodi asperiores fugit dolor nulla incidunt tempore pariatur
@@ -35,11 +33,26 @@
             vel. Nostrum quibusdam labore adipisci.
           </p>
         </div>
-      </article>
+      </article> -->
       <!-- New Year -->
       <article class="trads-article trads-new-year">
         <h2>Chinese New Year</h2>
         <div>
+          <figure>
+            <img src="./img/fireworks.jpg" alt="Firworks over Hong Kong" />
+            <figcaption>
+              New Year's fireworks display over Hong Kong.
+              <p class="trads-reference">
+                (<a
+                  href="https://commons.wikimedia.org/wiki/File:Kung_Hei_Fat_Choi!_(6834861529).jpg"
+                  >Michael Elleray from England, United Kingdom</a
+                >,
+                <a href="https://creativecommons.org/licenses/by/2.0"
+                  >CC BY 2.0</a
+                >, via Wikimedia Commons)
+              </p>
+            </figcaption>
+          </figure>
           <p class="trads-p">
             The Lunar New Year is a 15 day festival beginning with the first new
             moon between the 21st of January and the 20th of February. One of
@@ -57,21 +70,6 @@
             Piazza where you can see impressive lantern displays as well as
             other performances like dancing and acrobatics.
           </p>
-          <figure>
-            <img src="./img/fireworks.jpg" alt="Firworks over Hong Kong" />
-            <figcaption>
-              Fireworks display over Hong Kong.
-              <p class="trads-reference">
-                (<a
-                  href="https://commons.wikimedia.org/wiki/File:Kung_Hei_Fat_Choi!_(6834861529).jpg"
-                  >Michael Elleray from England, United Kingdom</a
-                >,
-                <a href="https://creativecommons.org/licenses/by/2.0"
-                  >CC BY 2.0</a
-                >, via Wikimedia Commons)
-              </p>
-            </figcaption>
-          </figure>
         </div>
       </article>
 
@@ -80,6 +78,22 @@
         <div>
           <div>
             <h2>Tin Hau Festival</h2>
+            <figure>
+              <img src="./img/Tin_Hau.jpg" alt="Statue of Tin Hau" />
+              <figcaption>
+                Statue of the goddess Tin Hau at Kwum Yam Shrine, Repulse Bay,
+                Hong Kong
+                <p class="trads-reference">
+                  <a
+                    href="https://commons.wikimedia.org/wiki/File:Tin_Hau_statue_at_Kwun_Yam_Shrine_at_Repulse_Bay.jpg"
+                    >FlyingToaster at English Wikipedia</a
+                  >,
+                  <a href="https://creativecommons.org/licenses/by/3.0"
+                    >CC BY 3.0</a
+                  >, via Wikimedia Commons
+                </p>
+              </figcaption>
+            </figure>
             <p>
               The Chinese sea goddess Tin Hau has historically been one of the
               most important gods in Hong Kong. As such, her birthday is
@@ -90,22 +104,6 @@
               traditional dances.
             </p>
           </div>
-          <figure>
-            <img src="./img/Tin_Hau.jpg" alt="Statue of Tin Hau" />
-            <figcaption>
-              Statue of the goddess Tin Hau at Kwum Yam Shrine, Repulse Bay,
-              Hong Kong
-              <p class="trads-reference">
-                <a
-                  href="https://commons.wikimedia.org/wiki/File:Tin_Hau_statue_at_Kwun_Yam_Shrine_at_Repulse_Bay.jpg"
-                  >FlyingToaster at English Wikipedia</a
-                >,
-                <a href="https://creativecommons.org/licenses/by/3.0"
-                  >CC BY 3.0</a
-                >, via Wikimedia Commons
-              </p>
-            </figcaption>
-          </figure>
         </div>
       </article>
 
@@ -114,6 +112,21 @@
         <div>
           <div>
             <h2>Dragon Boat Festival</h2>
+            <figure>
+              <img src="./img/boat.jpg" alt="Multiple Dragon Boats" />
+              <figcaption>
+                Dragon boat race in Hong Kong
+                <p class="trads-reference">
+                  <a
+                    href="https://commons.wikimedia.org/wiki/File:Dragon_boat_racing_in_Hong_Kong.jpg"
+                    >Atmhk</a
+                  >,
+                  <a href="https://creativecommons.org/licenses/by-sa/3.0"
+                    >CC BY-SA 3.0</a
+                  >, via Wikimedia Commons
+                </p>
+              </figcaption>
+            </figure>
             <p>
               The dragon boat festival is a public holiday in Hong Kong where
               people race in long canoes made to mimic ancient war boats with up
@@ -124,21 +137,6 @@
               world and up to thirty thousand spectators.
             </p>
           </div>
-          <figure>
-            <img src="./img/boat.jpg" alt="Multiple Dragon Boats" />
-            <figcaption>
-              Dragon boat race in Hong Kong
-              <p class="trads-reference">
-                <a
-                  href="https://commons.wikimedia.org/wiki/File:Dragon_boat_racing_in_Hong_Kong.jpg"
-                  >Atmhk</a
-                >,
-                <a href="https://creativecommons.org/licenses/by-sa/3.0"
-                  >CC BY-SA 3.0</a
-                >, via Wikimedia Commons
-              </p>
-            </figcaption>
-          </figure>
         </div>
       </article>
     </main>
