--- a/culture/index.html
+++ b/culture/index.html
@@ -19,7 +19,7 @@
       <a href="../">Home</a>
       <a href="../traditions/">traditions</a>
       <a href="../sights/">Sights</a>
-      <a href="../culture/">culture</a>
+      <a href="../culture/" class="active">culture</a>
       <a href="javascript:void(0);" class="icon" onclick="myFunction()">
         <i class="fa fa-bars"></i>
       </a>
